# minifaas

./: .env.example  Cargo.toml  Dockerfile  README.md  config.toml  logging.yml
minifaas-common/: Cargo.toml
minifaas-common/src/: datastore.rs  environment.rs  errors.rs  lib.rs  runtime.rs  triggers.rs  types.rs
minifaas-common/src/datastore/: config.rs  json_file.rs  mod.rs  record.rs
minifaas-common/src/environment/: environment.rs  environments.rs  mod.rs
minifaas-common/src/runtime/: functions.rs  mod.rs  ops.rs
minifaas-common/src/triggers/: http.rs  mod.rs  timer.rs
minifaas-rt/: Cargo.toml
minifaas-rt/src/: actors.rs  errors.rs  ext.rs  languages.rs  lib.rs  output_parser.rs  traits.rs  triggers.rs
minifaas-rt/src/actors/: function_executor.rs  mod.rs  runtime_controller.rs  triggered.rs
minifaas-rt/src/ext/: bash.rs  deno.rs  mod.rs  nodejs.rs  toolchain.rs
minifaas-rt/src/languages/: javascript copy.rs  javascript.rs  typescript.rs
minifaas-rt/src/logs/: collectors.rs  mod.rs
minifaas-rt/src/triggers/: http.rs  timer.rs
minifaas-test/: Cargo.toml
minifaas-test/src/: lib.rs
minifaas-web/: Cargo.toml  yarte.toml
minifaas-web/src/: actors.rs  config.rs  defaults.rs  errors.rs  main copy.rs  main.rs  models.rs  utils.rs
minifaas-web/src/routes/: api.rs  functions.rs  mod.rs
minifaas-web/src/routes/views/: mod.rs  models.rs
minifaas-web/static/: app.js
minifaas-web/templates/: index.hbs  index.html
minifaas-web/templates/partial/: edit.html  new.html
minifaas-web/templates/partials/: editor.hbs
