[package]
name = "minifaas-common"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.4"
rmp-serde = "0.14"
log = "0.4"