[package]
name = "minifaas-rt"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

[lib]
name = "minifaas_rt"      
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ducc = "0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.3"
minifaas-common = { path = "../minifaas-common" }
crossbeam-channel = "0.4"
hashbrown = { version = "0.7", features = ["serde"] }
log = "0.4"