[package]
name = "minifaas-rt"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

[lib]
name = "minifaas_rt"      
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
anyhow ="1.0"
minifaas-common = { path = "../minifaas-common" }
log = "0.4"
url = "2.2"
async-trait = "*"
chrono = "*"
xactor = "0.7"
async-std = "1.8"
#surf = {version="1.0.3", features=["curl-client"]}
#reqwest = {version="*", features=["rustls-tls", "gzip"]}
ureq = "*"
os_info = "3.0"
zip = "0.5"
uuid = { version = "0.8", features = ["v4", "serde"] }
futures = "0.3"
regex = "1.4"
hex = "0.4"
cron = "0.9"

[dev-dependencies]
minifaas-test = { path = "../minifaas-test" }
