[package]
name = "minifaas-web"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
actix-rt = "1"
chrono = { version = "0.4", features = ["serde"] }
minifaas-common = { path = "../minifaas-common" }
minifaas-rt = { path = "../minifaas-rt" }
askama = "0.9"
actix-files = "0.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
crossbeam-channel = "0.4"
futures = "0.3"
regex = "1"
clap = "2"
toml = "0.5"
log = "0"
log4rs = "0"

[dev-dependencies]
tokio-test = "0.2.1"