[package]
name = "minifaas-web"
version = "0.1.0"
authors = ["Claus Matzinger <claus.matzinger+kb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tide = {git ="https://github.com/http-rs/tide.git"}
http-types = "*"
async-std = { version = "1.6", features = ["attributes"] }
chrono = { version = "0.4", features = ["serde"] }
minifaas-common = { path = "../minifaas-common" }
minifaas-rt = { path = "../minifaas-rt" }
askama = "0.9"
uuid = { version = "0.8", features = ["serde", "v4"] }
crossbeam-channel = "0.4"
regex = "1"
clap = "2"
toml = "0.5"
log = "0"
log4rs = "0"
futures-util  = "0.3.5"
xactor = "0.6"

[dev-dependencies]
tokio-test = "0.2.1"